@startuml
title Class Diagram: Core Domain Model

skinparam backgroundColor white
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam linetype ortho

class User {
  +id: UUID
  +name: String
  +email: String
  -passwordHash: String
  +role: String
}

class UserProfile {
  +id: UUID
  +userId: UUID
  +age: int
  +gender: String
  +heightCm: double
  +weightKg: double
  +activityLevel: String
  +primaryGoal: String
}

class Exercise {
  +id: UUID
  +name: String
  +category: String
  +muscleGroup: String
  +equipment: String
  +intensityLevel: String
}

class WorkoutSession {
  +id: UUID
  +userId: UUID
  +workoutDate: Date
  +category: String
  +durationMin: int
  +notes: Text
}

class WorkoutEntry {
  +id: UUID
  +sessionId: UUID
  +exerciseId: UUID
  +sets: int
  +reps: int
  +weightKg: double
  +restSec: int
}

class FoodItem {
  +id: UUID
  +name: String
  +servingSize: String
  +calories: double
  +protein: double
  +carbohydrates: double
  +fat: double
  +sugar: double
  +sodium: double
}

class MealLog {
  +id: UUID
  +userId: UUID
  +foodItemId: UUID
  +mealType: String
  +quantity: double
  +mealTime: DateTime
  +totalCalories: double
  +totalProtein: double
  +totalCarbs: double
  +totalFat: double
}

class BodyRecord {
  +id: UUID
  +userId: UUID
  +recordDate: Date
  +weightKg: double
  +note: Text
}

class Goal {
  +id: UUID
  +userId: UUID
  +goalType: String
  +targetMetric: String
  +targetValue: double
  +deadline: Date
  +priority: String
  +status: String
}

class GoalMilestone {
  +id: UUID
  +goalId: UUID
  +title: String
  +targetValue: double
  +dueDate: Date
  +completed: boolean
}

class AnalyticsSnapshot {
  +id: UUID
  +userId: UUID
  +periodType: String
  +startDate: Date
  +endDate: Date
  +workoutConsistency: double
  +trainingVolume: double
  +calorieIntake: double
  +calorieBalance: double
  +goalAdherence: double
  +weightTrend: String
}

class AIRecommendation {
  +id: UUID
  +userId: UUID
  +type: String
  +promptContext: Text
  +content: Text
}

class RecommendationFeedback {
  +id: UUID
  +recommendationId: UUID
  +rating: String
  +suitability: String
  +comment: Text
}

class ProgressReport {
  +id: UUID
  +userId: UUID
  +periodType: String
  +generatedAt: DateTime
  +summary: Text
  +fileUrl: String
}

User "1" -- "0..1" UserProfile
User "1" -- "*" WorkoutSession
WorkoutSession "1" *-- "*" WorkoutEntry
Exercise "1" -- "*" WorkoutEntry
User "1" -- "*" MealLog
FoodItem "1" -- "*" MealLog
User "1" -- "*" BodyRecord
User "1" -- "*" Goal
Goal "1" *-- "*" GoalMilestone
User "1" -- "*" AnalyticsSnapshot
User "1" -- "*" AIRecommendation
AIRecommendation "1" *-- "*" RecommendationFeedback
User "1" -- "*" ProgressReport

AnalyticsSnapshot ..> WorkoutSession : derived from
AnalyticsSnapshot ..> MealLog : derived from
AnalyticsSnapshot ..> BodyRecord : derived from
AnalyticsSnapshot ..> Goal : derived from
ProgressReport ..> AnalyticsSnapshot : same analytics model
@enduml
